fix z-index

--- a/static/css/link.css
+++ b/static/css/link.css
@@ -35,6 +35,7 @@
     position: absolute;
     min-width: 270px;
     visibility: hidden;
+    z-index: 999000;
   }
   
   /* WITH ICONS */
